# sales-agent-backend

./: .env.example  .gitignore  README.md  database.py  dependencies.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 0e8cfe9fa7db_make_people_title_and_email_not_null.py  d9833c516979_initial_tables.py
commands/: campaign_commands.py  company_commands.py  enrichment_commands.py  people_commands.py
queries/: campaign_queries.py  company_queries.py  people_queries.py
routes/: ai.py  campaigns.py  companies.py  discover.py  people.py
services/: ai_service.py  scraper_service.py  search_service.py
